plugins {
    id "java"
    id "application"
    id "org.openjfx.javafxplugin" version "0.1.0"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = "25.0.2"
    modules = [ "javafx.controls", "javafx.web" ]
}

application {
    mainClass = 'blue.rose.App'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.openjfx:javafx-controls:25.0.2"
    implementation "org.openjfx:javafx-web:25.0.2"
    
    implementation libs.guava
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named("test") {
    useJUnitPlatform()
    failOnNoDiscoveredTests = false
}

tasks.named("run", JavaExec) {
    doFirst {
        jvmArgs += [
            "--module-path", classpath.asPath,
            "--add-modules", "javafx.controls,javafx.web"
        ]
    }
}

